Fix shifting text bug when form is open

--- a/react-app/src/components/Dropdown/Dropdown.module.css
+++ b/react-app/src/components/Dropdown/Dropdown.module.css
@@ -27,7 +27,7 @@
 }
 
 .optionsContainer {
-  width: 60%;
+  width: 50%;
   box-sizing: border-box;
   background-color: white;
   max-width: 600px;
